syntax = "proto3";

package auth;

service AuthService {
  rpc Login (LoginRequest) returns (AuthResponse);
  rpc SignUp (SignUpRequest) returns (AuthResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
  rpc RefreshToken (RefreshTokenRequest) returns (AuthResponse);
  rpc ResetPassword (ResetPasswordRequest) returns (ResetPasswordResponse);
}

// Request messages remain the same
message LoginRequest { /* ... */ }
message SignUpRequest { /* ... */ }
message LogoutRequest { /* ... */ }
message RefreshTokenRequest { /* ... */ }
message ResetPasswordRequest { /* ... */ }

// Updated response messages
message AuthResponse {
  oneof response {
    AuthSuccess success = 1;
    ErrorResponse error = 2;
  }
}

message AuthSuccess {
  string accessToken = 1;
  string refreshToken = 2;
  UserData user = 3;
}

message UserData {
  string id = 1;
  string email = 2;
  string name = 3;
}

message LogoutResponse {
  oneof response {
    LogoutSuccess success = 1;
    ErrorResponse error = 2;
  }
}

message LogoutSuccess {
  bool success = 1;
}

message ResetPasswordResponse {
  oneof response {
    ResetPasswordSuccess success = 1;
    ErrorResponse error = 2;
  }
}

message ResetPasswordSuccess {
  bool success = 1;
}

message ErrorResponse {
  int32 code = 1;                // gRPC status code
  string message = 2;            // User-friendly message
  repeated ErrorDetail errors = 3; // Field-specific errors
  string timestamp = 4;          // ISO timestamp
}

message ErrorDetail {
  string field = 1;              // Which field caused error
  string message = 2;            // Field-specific message
  string code = 3;               // Machine-readable code
}